--- a/manpowerProject/pom.xml
+++ b/manpowerProject/pom.xml
@@ -285,9 +285,9 @@
         </includes>
       </resource>
       <!--指定资源的位置-->
-      <!--  <resource>
+        <resource>
           <directory>src/main/resources</directory>
-        </resource>-->
+        </resource>
     </resources>
     <finalName>manpowerProject</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
