--- a/manpowerProject/src/main/webapp/WEB-INF/web.xml
+++ b/manpowerProject/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,20 @@
     <filter-name>characterEncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+ <!-- <filter>
+    <filter-name>setCharactor</filter-name>
+    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>setCharactor</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>-->
   <servlet>
     <servlet-name>dispatcherServlet</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
