--- a/manpowerProject/pom.xml
+++ b/manpowerProject/pom.xml
@@ -23,13 +23,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -50,7 +44,12 @@
       <version>2.1</version>
       <scope>provided</scope>
     </dependency>
-
+<!--时间转换包-->
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.3</version>
+    </dependency>
     <!--jstl-->
     <dependency>
       <groupId>javax.servlet</groupId>
